合并谜题和创作任务的帮助系统

--- a/src/components/puzzle-pane/puzzle-pane.css
+++ b/src/components/puzzle-pane/puzzle-pane.css
@@ -64,8 +64,8 @@
               also introduces a new bug in Chrome when vertically resizing window down,
               then back up, introduces white space in the outside the page container.
     */
-    height: calc(100% - $sprite-info-height);
-    overflow-y: scroll;
+    height: calc(100%);
+    overflow-y: auto;
     padding: $space;
 }
 
